# esup-groudap

./: .gitignore  Cargo.toml  README.md  Rocket.toml
ldap-test-server/: create-db.sh  destroy-db.sh  startdb.sh  stopdb.sh
ldap-test-server/minimal/: add-db.ldif  config-core.ldif  root.ldif
ldap-test-server/schema/: groupald.ldif  groupald.schema  supann-2021-10-01.ldif  up1-syncgroup.ldif  up1-syncgroup.schema
resources/java-client/: gsh-emulation-commands.bsh  pom.xml
resources/schema/: groupald.ldif  (+1 more)
server/: .eslintrc.js  api_get.ts  api_log.ts  api_post.ts  api_routes.ts  cache.ts  cas_auth.ts  conf-remote-sources.ts  conf.ts  cron.ts  dn.ts  express_helpers.ts  helpers.ts  jest.config.js  ldap_check_rights.ts  ldap_filter.ts  ldap_helpers.ts  ldap_read_search.ts  ldap_sgroup_read_search_modify.ts  ldap_subject.ts  ldap_wrapper.ts  main.ts  my_ldap.ts  my_ldap_check_rights.ts  my_ldap_subjects.ts  my_types.ts  openapi.ts  package.json  periodicity.ts  remote_ldap_query.ts  remote_query.ts  sql.ts  stem_helpers.ts  systemd_calendar_events.ts  test_data.ts  tsconfig.json  types.d.ts
src/: api.rs  api_get.rs  api_log.rs  api_post.rs  api_routes.rs  cache.rs  cas_auth.rs  cron.rs  helpers.rs  ldap_filter.rs  ldap_wrapper.rs  main.rs  my_err.rs  my_ldap.rs  my_ldap_check_rights.rs  my_ldap_subjects.rs  my_types.rs  remote_query.rs  rocket_helpers.rs  systemd_calendar_events.rs  test_data.rs
static/: app.css  index.html  lib.js  package.json  sgroup.html  tsconfig.json  vite.config.js
ui/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
(+52 files in other folders)
