[package]
name = "esup-groudap"
version = "0.1.0"
edition = "2021"

[dependencies]
maplit = "1.x"
chrono = "0.4.x"
reqwest = { version = "0.11" }
tokio = { version = "1.x", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "x"
ldap3 = { version = "0.9.x", default-features = false } # features = ["tls"]
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }

